# ee4308

./: .gitignore  README.md  kill_gz.sh  proj1.sh  proj1_sim.sh  proj1_sim_slam.sh  proj1_slam.sh  teleop_turtle.sh
docs/: lab1.md  lab2.md  proj1.md
src/ee4308_bringup/launch/: nav2_turtle.launch.py  proj1.launch.py  proj1_sim.launch.py  proj1_sim_slam.launch.py  sim.launch.py  slam_turtle.launch.py  spawn_models.launch.py
src/ee4308_bringup/maps/: proj1_sim.yaml
src/ee4308_bringup/params/: proj1.yaml  ros_gz_bridge_proj1.yaml  slam_turtle.lua
src/ee4308_bringup/worlds/: turtlebot3_world.world
src/ee4308_drone/include/ee4308_drone/: estimator.hpp
src/ee4308_drone/src/: estimator.cpp
src/ee4308_turtle/: CMakeLists.txt  package.xml
src/ee4308_turtle/include/ee4308_turtle/: controller.hpp  core.hpp  planner.hpp
src/ee4308_turtle/src/: controller.cpp  planner.cpp
